--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-	
-  <head>
-    <title>Memory Game</title>
-  </head>
+<html>
+<head>
+  <link rel= "stylesheet" type=text/css href= "/Users/AK/fundamentals/wdi-fundamentals-memorygame/starter-code/style.css">
+  <title>Memory Game</title>
+</head>
+<body>
+  <nav class= "clearfix">
+    <a href="#">Instruction</a>
+    <a href="#">Game</a>
+
+  </nav>
+  <h1>Memory Game</h1>
+  <h2>Instructions</h2>
+  <p>
+    Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso, or Pairs, is a card game in which all of the cards are laid facedown on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
+  </p>
+  <hr>
+  <h2>What makes it fun</h2>
+  <p>
+    It is a challenge to our capacity to remember, and remember quick!
+    You can compete with your friends, think about fun prices to the winner or maybe creating your own score! You will not even realize that you are excercising your brain.
+  </p>
+  <hr>
+  <div class="board">
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+  </div>
   
-    <nav class="clearfix">
-      <a href="#">Instructions</a>
-      <a href="#">Game</a>
-    </nav>
-    
-    <body>
-    	<h1>Memory Game</h1>
-    	<h2>Instructions</h2>
-    	<p>
-    		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-    	</p>
-    	
-    	<div class="board">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-  	</div>
-  
-  	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
-	</footer>
-
-     </body>
-
-
+  <footer>
+    <p>Created with &hearts; by <span class="name">GA</span></p>
+  </footer>
+  <script src="/Users/AK/fundamentals/wdi-fundamentals-memorygame/starter-code/main.js"></script>
+</body>
 </html>
