commented out the div(card)s, and through js gave an id to the board and created card div in js

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,10 +23,10 @@
   </p>
   <hr>
   <div class="board">
+   <!-- <div class="card"></div>
     <div class="card"></div>
     <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+    <div class="card"></div> -->
   </div>
   
   <footer>
