finished the js part adding set attributes and event listeners to createBoard, as well as the isMatch function and the isTwoCards function, with images, a cards in play array and reloading

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,12 +4,12 @@
   <link rel= "stylesheet" type=text/css href= "/Users/AK/fundamentals/wdi-fundamentals-memorygame/starter-code/style.css">
   <title>Memory Game</title>
 </head>
-<body>
   <nav class= "clearfix">
     <a href="#">Instruction</a>
     <a href="#">Game</a>
 
   </nav>
+  <body>
   <h1>Memory Game</h1>
   <h2>Instructions</h2>
   <p>
@@ -22,11 +22,8 @@
     You can compete with your friends, think about fun prices to the winner or maybe creating your own score! You will not even realize that you are excercising your brain.
   </p>
   <hr>
-  <div class="board">
-   <!-- <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div> -->
+  <div class="board" id='game-board'>
+   
   </div>
   
   <footer>
